--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* ===== geral =========*/
+/* ==============GERAL=======================*/
 * {
   margin: 0;
   padding: 0;
@@ -13,6 +13,7 @@
 
   --brand-beige: hsl(39, 100%, 97%);
   --brand-light: hsl(calc(var(--hue) - 22), 23%, 89%);
+  --brand-light-2: hsl(calc(var(--hue) + 10), 14%, 97%);
   --brand-dark: hsl(var(--hue), 100%, 14%);
 
   --bg-light: hsl(180, 14%, 97%);
@@ -44,13 +45,17 @@ body {
 }
 
 .wrapper {
-  width: 37.5rem;
+  width: min(50rem, 100%);
   margin-inline: auto;
   padding-inline: 2.4rem;
 }
 
 ul {
   list-style: none;
+}
+
+img {
+  max-width: 100%;
 }
 
 section {
@@ -113,11 +118,11 @@ section .content p {
   gap: 1.6rem;
 
   text-decoration: none;
+  transition: background 200ms;
 }
 
 .button:hover {
   background-color: var(--brand-dark);
-  transition: background 200ms;
 }
 
 .social-links {
@@ -151,7 +156,7 @@ body.menu-expanded #navigation .logo path,
   stroke: white;
 }
 
-/*===============navegation======*/
+/*===============NAVIGATION======================*/
 nav {
   display: flex;
 
@@ -174,6 +179,7 @@ nav.scroll {
   background: var(--primary-color);
 }
 
+/*
 nav.scroll .logo path {
   fill: white;
 }
@@ -181,11 +187,17 @@ nav.scroll .logo path {
 nav.scroll button path {
   stroke: white;
 }
-
+*/
 nav button {
   background: none;
   border: none;
   cursor: pointer;
+}
+
+
+nav .menu,
+nav .close-menu {
+  position: fixed;
 }
 
 /*===============MENU-expanded=================*/
@@ -215,7 +227,6 @@ body.menu-expanded .close-menu {
 }
 
 body.menu-expanded .menu {
-  position: fixed;
   top: 0;
   left: 0;
   background: var(--primary-color);
@@ -226,7 +237,7 @@ body.menu-expanded .menu {
   padding-top: var(--nav-height);
 
   transition: transform 300ms;
-  transform: translateY(0%);
+  transform: translateY(0);
 }
 
 .menu ul:nth-child(1) {
@@ -286,13 +297,14 @@ body.menu-expanded button path {
 
 /*======= HOME =========*/
 #home {
+  padding-block: 0;
   padding-top: calc(4.1rem + var(--nav-height));
 }
 
 #home::before {
   content: '';
   width: 100%;
-  height: calc(108rem + var(--nav-height));
+  height: calc(76% + var(--nav-height));
   background-color: var(--brand-light);
   display: block;
 
@@ -306,6 +318,7 @@ body.menu-expanded button path {
   margin-inline: auto;
 }
 
+/*
 #home h4 {
   font-size: 1.4rem;
   color: var(--primary-color);
@@ -318,9 +331,10 @@ body.menu-expanded button path {
   line-height: 130%;
   margin-bottom: 2.4rem;
 }
+*/
 
 #home p {
-  font: size 1.8rem;
+  font-size: 1.8rem;
   line-height: 150%;
   font-weight: 400;
   color: var(--paragraph);
@@ -336,7 +350,7 @@ body.menu-expanded button path {
 }
 
 #home .stats {
-  width: 32.7rem;
+  width: 100%;
   padding-block: 4rem;
   margin-inline: auto;
 
@@ -365,8 +379,8 @@ body.menu-expanded button path {
   line-height: 150%;
 }
 
-/*===============Services=================*/
-#services h2 {
+/*===============SERVICES=================*/
+#services header h2 {
   margin-bottom: 6rem;
 }
 
@@ -390,7 +404,7 @@ body.menu-expanded button path {
   margin-block: 1.6rem;
 }
 
-/*===============about=================*/
+/*===============ABOUT=================*/
 #about {
   text-align: left;
   background-color: var(--brand-beige);
@@ -404,7 +418,7 @@ body.menu-expanded button path {
   margin-top: 2.4rem;
   margin-bottom: 6rem;
 }
-/*===============contact=================*/
+/*===============CONTACT=================*/
 #contact {
   text-align: left;
 }
@@ -426,7 +440,7 @@ body.menu-expanded button path {
   align-items: center;
   gap: 0.8rem;
 }
-/*===============footer=================*/
+/*===============FOOTER=================*/
 footer {
   background-color: var(--primary-color);
   padding-block: 6rem;
@@ -478,4 +492,271 @@ footer .social-links {
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
+}
+/*============RESPONSIVO============*/
+@media (min-width: 1024px) {
+  /*==========GERAL============*/
+
+  body {
+    overflow: auto;
+  }
+
+  .wrapper {
+    width: min(112rem, 100%);
+    display: grid;
+  }
+
+  .col-a {
+    grid-area: A;
+  }
+
+  .col-b {
+    grid-area: B;
+  }
+
+  section {
+    padding-block: 16rem;
+  }
+
+  section header h2 {
+    font-size: 4rem;
+    line-height: 5.2rem;
+  }
+
+  /*===========NAVIGATION============*/
+
+  /* RESET */
+  nav#navigation .wrapper * {
+    margin: 0;
+    padding: 0;
+    visibility: initial;
+    display: initial;
+    opacity: initial;
+    flex-direction: initial;
+    position: initial;
+    font-size: initial;
+    font-weight: initial;
+    transform: initial;
+    color: initial;
+    background-color: initial;
+    filter: initial;
+  }
+
+  nav#navigation .close-menu,
+  nav#navigation .open-menu,
+  nav#navigation .social-links {
+    display: none;
+  }
+
+  nav#navigation .menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 60%;
+  }
+
+  nav#navigation .menu ul:nth-child(1) {
+    display: flex;
+    gap: 3.2rem;
+  }
+
+  nav#navigation .menu ul li a {
+    color: var(--primary-color);
+    opacity: 0.7;
+  }
+
+  nav#navigation .menu a.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 2.4rem;
+
+    border: 1px solid var(--primary-color);
+    border-radius: 4rem;
+
+    color: var(--primary-color);
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    text-transform: uppercase;
+  }
+
+  nav#navigation .menu a.button:hover {
+    background-color: var(--primary-color);
+    border: none;
+    color: white;
+  }
+
+  nav#navigation.scroll .menu ul li a {
+    color: var(--brand-light-2);
+    opacity: 0.6;
+  }
+
+  nav#navigation.scroll .menu a.button {
+    border-color: white;
+    color: white;
+  }
+
+  nav#navigation .menu li a {
+    transition: opacity 0.4s;
+  }
+
+  nav#navigation .menu li a.active,
+  nav#navigation .menu li a:hover {
+    opacity: 1;
+    font-weight: 700;
+  }
+
+  nav#navigation .menu li a::after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background-color: var(--primary-color);
+
+    position: relative;
+    bottom: -1.9rem;
+    left: -0.5rem;
+
+    display: block;
+    transition: width 0.2s;
+  }
+
+  nav#navigation.scroll .menu li a::after {
+    background-color: white;
+  }
+
+  nav#navigation .menu li a.active::after,
+  nav#navigation .menu li a:hover::after {
+    padding-inline: 0.8rem;
+    width: 100%;
+  }
+
+  nav#navigation.scroll .menu li a.active,
+  nav#navigation.scroll .menu li a:hover {
+    opacity: 1;
+  }
+
+  nav#navigation.scroll .menu a.button.active,
+  nav#navigation.scroll .menu a.button:hover {
+    background-color: var(--primary-color);
+    filter: brightness(1.3);
+    border: none;
+  }
+
+  /*===============HOME=======================*/
+  #home::before {
+    height: calc(96% - var(--nav-height));
+  }
+
+  #home {
+    padding-top: var(--nav-height);
+  }
+
+  #home .wrapper {
+    grid-template-columns: 60.5rem 1fr;
+    grid-template-areas:
+      'A B'
+      'C C';
+  }
+
+  #home .col-a {
+    text-align: left;
+    align-self: center;
+  }
+
+  #home h1 {
+    font-size: 5.2rem;
+  }
+
+  #home .content p {
+    font-size: 1.8rem;
+  }
+
+  #home .stats {
+    grid-area: C;
+
+    flex-direction: row;
+    padding: 6rem;
+    gap: 0;
+  }
+
+  #home .stats .stat + .stat {
+    border-left: 1px solid var(--primary-color);
+  }
+
+  #home .stats .stat {
+    flex: 1;
+  }
+
+  #home .button {
+    margin: 0;
+  }
+
+  #home img {
+    width: 42rem;
+  }
+
+  /*===============SERVICES===============*/
+  #services h2 {
+    width: 47rem;
+    margin-inline: auto;
+  }
+
+  #services .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem;
+  }
+
+  #services .card {
+    width: 30%;
+    flex-grow: 1;
+  }
+
+  /*==================ABOUT==================*/
+  #about .wrapper {
+    grid-template-columns: 48rem 1fr;
+    grid-template-areas: 'B A';
+    gap: 6.7rem;
+  }
+
+  #about .col-a {
+    align-self: center;
+  }
+
+  #about .content p {
+    margin-bottom: 0;
+  }
+
+  /*==================CONTACT==================*/
+  #contact .wrapper {
+    grid-template-columns: 1fr 57.5rem;
+    grid-template-areas: 'A B';
+  }
+
+  #contact h2 {
+    width: 40.4rem;
+  }
+  /*==================FOOTER==================*/
+  footer {
+    padding-block: 8rem;
+  }
+
+  footer .wrapper {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'A B';
+  }
+
+  footer .col-a {
+    align-self: center;
+  }
+
+  footer .col-b {
+    align-self: center;
+    justify-self: flex-end;
+  }
+
+  footer p {
+    margin-bottom: 0;
+  }
 }
